# synaptiq

./: .gitignore  .npmrc  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml  eslint.config.mjs  firebase.json  lint.txt  n8n-vs-synaptiq-analysis.md  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pom.xml  test-foblex.ts  test_api.py  tsconfig.base.json  tsconfig.json  vision_audit.md  workflow-implementation-plan.md
.github/: FUNDING.yml  dependabot.yml  (+1 more)
apps/backend/api/: .env.example  Dockerfile  README.md  _check_db.py  _e2e_setup.py  _fix_persona.py  check_persona.py  fix_db.py  project.json  pyproject.toml  test_models.py
apps/backend/api/src/synaptiq_api/: main.py
apps/backend/api/src/synaptiq_api/core/: config.py  dependencies.py  firebase.py  mongodb.py  rate_limiter.py  redis.py  security.py
apps/backend/api/src/synaptiq_api/middleware/: auth.py  rate_limit.py  tenant.py
apps/backend/api/src/synaptiq_api/models/: __init__.py  action_log.py  auth.py  base.py  catalog.py  saved_item.py  session.py  tenant.py  usage.py  user.py
apps/backend/api/src/synaptiq_api/routers/: actions.py  analytics.py  auth.py  branding.py  catalog.py  chat.py  config.py  health.py  schema_registry.py  tenants.py  workflow.py
apps/backend/api/src/synaptiq_api/scripts/: embed_items.py  seed_db.py  seed_dev.py  seed_e2e_data.py
apps/backend/api/src/synaptiq_api/services/: __init__.py  action_service.py  aggregation_job.py  auth_service.py  builtin_auth_service.py  catalog_service.py  chat_service.py  embedding_service.py  llm_provider.py  prompt_service.py  schema_parser.py  schema_registry.py  schema_service.py  search_log_service.py  search_service.py  stream_buffer.py  tenant_service.py  tool_registry.py  workflow_executor.py  workflow_service.py
apps/backend/api/src/synaptiq_api/websockets/: connection_manager.py
libs/backend/agent-flow/: README.md  project.json  pyproject.toml
libs/backend/agent-flow/src/agent_flow/: agent.py  agent_engine_app.py
libs/backend/agent-flow/src/agent_flow/builder/: __init__.py  builder.py
libs/backend/agent-flow/src/agent_flow/coordinator/: coordinator.py  coordinator_spec.json  execution.py  routing.py
libs/backend/agent-flow/src/agent_flow/executor/: __init__.py  engine.py
libs/backend/agent-flow/src/agent_flow/flow_generation/: generator.py  generator_settings.json
libs/backend/agent-flow/src/agent_flow/flows/: simple_agent.json
libs/backend/agent-flow/src/agent_flow/integrations/: __init__.py  registry.py
libs/backend/agent-flow/src/agent_flow/tools/: builder_tools.py  generator_tools.py  weather.py
libs/backend/agent-flow/src/agent_flow/utils/: firestore.py  graph_utils.py  io.py  tracing.py  typing.py
(+1537 files in other folders)
