[project]
name = "synaptiq-agent-flow"
version = "0.1.0"
description = "Dynamic JSON-based AI agent workflow engine — LangGraph orchestration"
requires-python = ">=3.12,<4"
dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-google-genai>=4.2.2",
    "pydantic>=2.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_flow"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
